--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -16,22 +16,28 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
     "\n",
+    "class LinearData(Dataset):\n",
+    "  def __init__(self, data):\n",
+    "    self.data = data\n",
+    "    self.subjects = data[\"subject\"].unique()\n",
+    "\n",
+    "  def __len__(self):\n",
+    "    return len(self.subjects)\n",
+    "\n",
+    "  def __getitem__(self, index):\n",
+    "    samples = self.data[self.data[\"subject\"] == self.subjects[index]]\n",
+    "    x = samples.pivot(index=\"time\", columns=\"taxon\", values=\"Freq\")\n",
+    "    y = [1.0 * (samples[\"class\"].values[0] == \"healthy\")]\n",
+    "    return np.array(x), torch.Tensor(y)\n",
+    "\n",
+    "# use the data from ../generate\n",
     "samples_df = pd.read_csv(\"../data/linear.csv\")\n",
-    "print(samples_df)\n",
-    "\n",
-    "samples_array = samples_df.pivot(index=[\"subject\", \"time\", \"class\"], columns=\"taxon\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "samples_df[samples_df[\"subject\"] == \"subject_1\"]\n",
-    "\n",
-    "samples_df[\"subject\"].unique()"
+    "dataset = LinearData(samples_df)\n",
+    "loader = DataLoader(dataset, batch_size = 16)\n",
+    "next(iter(loader))\n"
    ]
   },
   {
@@ -47,29 +53,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "import numpy as np\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch import nn\n",
+    "from transformers import GPT2Config, GPT2Model\n",
     "\n",
-    "class LinearData(Dataset):\n",
-    "  def __init__(self, data):\n",
-    "    self.data = data\n",
-    "    self.subjects = data[\"subject\"].unique()\n",
+    "class Transformer(nn.Module):\n",
+    "  def __init__(self, n_embd=300, n_positions=25, n_layer=5, n_class=2):\n",
+    "    super(Transformer, self).__init__()\n",
+    "    config = GPT2Config(n_embd=n_embd, n_positions=n_positions, n_layer=n_layer)\n",
+    "    self.backbone = GPT2Model(config)\n",
+    "    self.logits = nn.Linear(n_embd * n_positions, n_class - 1)\n",
     "\n",
-    "  def __len__(self):\n",
-    "    return len(self.subjects)\n",
+    "  def forward(self, x):\n",
+    "    z = self.backbone(inputs_embeds=x)\n",
+    "    return z, self.logits(z.last_hidden_state.view(x.shape[0], -1))\n",
     "\n",
-    "  def __getitem__(self, index):\n",
-    "    samples = self.data[self.data[\"subject\"] == self.subjects[index]]\n",
-    "    #import pdb\n",
-    "    #pdb.set_trace()\n",
-    "    x = samples.pivot(index=\"time\", columns=\"taxon\", values=\"Freq\")\n",
-    "    y = [samples[\"class\"].values[0]]\n",
-    "    return np.array(x).T, y\n",
-    "\n",
-    "\n",
-    "dataset = LinearData(samples_df)\n",
-    "loader = DataLoader(dataset, batch_size = 16)"
+    "model = Transformer()\n",
+    "z, probs = model(torch.randn((16, 25, 300)))"
    ]
   },
   {
@@ -77,6 +76,55 @@
    "metadata": {},
    "source": [
     "We can now train the model based on the input data loader, using a lightning trainer."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import lightning as L\n",
+    "from torch import optim\n",
+    "\n",
+    "# define the LightningModule\n",
+    "class LitTransformer(L.LightningModule):\n",
+    "    def __init__(self, model):\n",
+    "        super().__init__()\n",
+    "        self.model = model\n",
+    "\n",
+    "    def training_step(self, batch, index):\n",
+    "        x, y = batch\n",
+    "        _, p_hat = self.model(x)\n",
+    "        loss = nn.functional.binary_cross_entropy_with_logits(p_hat, y)\n",
+    "        self.log(\"train_loss\", loss)\n",
+    "        return loss\n",
+    "\n",
+    "    def configure_optimizers(self):\n",
+    "        optimizer = optim.Adam(self.parameters(), lr=1e-3)\n",
+    "        return optimizer\n",
+    "\n",
+    "\n",
+    "# init the autoencoder\n",
+    "lit_model = LitTransformer(model)\n",
+    "trainer = L.Trainer(max_epochs=1)\n",
+    "trainer.fit(model=lit_model, train_dataloaders=loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lit_model.model.eval()\n",
+    "\n",
+    "p_hat = []\n",
+    "with torch.no_grad():\n",
+    "  for x, _ in loader:\n",
+    "    p_hat.append(lit_model.model(x)[1])\n",
+    "\n",
+    "pd.DataFrame(torch.concatenate(p_hat)).to_csv(\"../data/p_hat.csv\")"
    ]
   },
   {
@@ -88,6 +136,7 @@
     "```\n",
     "conda install conda-forge::pytorch-lightning\n",
     "conda install conda-forge::pandas\n",
+    "conda install conda-forge::tensorboard\n",
     "```"
    ]
   },
