externalized from transformer

--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -16,35 +16,21 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "\n",
-    "class LinearData(Dataset):\n",
-    "  def __init__(self, data):\n",
-    "    self.data = data\n",
-    "    self.subjects = data[\"subject\"].unique()\n",
-    "\n",
-    "  def __len__(self):\n",
-    "    return len(self.subjects)\n",
-    "\n",
-    "  def __getitem__(self, index):\n",
-    "    samples = self.data[self.data[\"subject\"] == self.subjects[index]]\n",
-    "    x = samples.pivot(index=\"time\", columns=\"taxon\", values=\"Freq\")\n",
-    "    y = [1.0 * (samples[\"class\"].values[0] == \"healthy\")]\n",
-    "    return np.array(x), torch.Tensor(y)\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformer import LinearData\n",
     "\n",
     "# use the data from ../generate\n",
-    "samples_df = pd.read_csv(\"../data/linear.csv\")\n",
+    "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
     "dataset = LinearData(samples_df)\n",
     "loader = DataLoader(dataset, batch_size = 16)\n",
-    "next(iter(loader))\n"
+    "x, y = next(iter(loader))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we let's write a model with a forward function that lets us get predicted probabilities for the two classes given the historical microbiome profile so far."
+    "Next, we let's define a model with a forward function that lets us get predicted probabilities for the two classes given the historical microbiome profile so far."
    ]
   },
   {
@@ -53,22 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from torch import nn\n",
-    "from transformers import GPT2Config, GPT2Model\n",
-    "\n",
-    "class Transformer(nn.Module):\n",
-    "  def __init__(self, n_embd=300, n_positions=25, n_layer=5, n_class=2):\n",
-    "    super(Transformer, self).__init__()\n",
-    "    config = GPT2Config(n_embd=n_embd, n_positions=n_positions, n_layer=n_layer)\n",
-    "    self.backbone = GPT2Model(config)\n",
-    "    self.logits = nn.Linear(n_embd * n_positions, n_class - 1)\n",
-    "\n",
-    "  def forward(self, x):\n",
-    "    z = self.backbone(inputs_embeds=x)\n",
-    "    return z, self.logits(z.last_hidden_state.view(x.shape[0], -1))\n",
+    "from transformer import Transformer\n",
+    "import torch\n",
     "\n",
     "model = Transformer()\n",
-    "z, probs = model(torch.randn((16, 25, 300)))"
+    "z, probs = model(torch.randn((16, 50, 144)))"
    ]
   },
   {
@@ -85,29 +60,10 @@
    "outputs": [],
    "source": [
     "import lightning as L\n",
-    "from torch import optim\n",
+    "from transformer import LitTransformer\n",
     "\n",
-    "# define the LightningModule\n",
-    "class LitTransformer(L.LightningModule):\n",
-    "    def __init__(self, model):\n",
-    "        super().__init__()\n",
-    "        self.model = model\n",
-    "\n",
-    "    def training_step(self, batch, index):\n",
-    "        x, y = batch\n",
-    "        _, p_hat = self.model(x)\n",
-    "        loss = nn.functional.binary_cross_entropy_with_logits(p_hat, y)\n",
-    "        self.log(\"train_loss\", loss)\n",
-    "        return loss\n",
-    "\n",
-    "    def configure_optimizers(self):\n",
-    "        optimizer = optim.Adam(self.parameters(), lr=1e-3)\n",
-    "        return optimizer\n",
-    "\n",
-    "\n",
-    "# init the autoencoder\n",
     "lit_model = LitTransformer(model)\n",
-    "trainer = L.Trainer(max_epochs=1)\n",
+    "trainer = L.Trainer(max_epochs=2)\n",
     "trainer.fit(model=lit_model, train_dataloaders=loader)"
    ]
   },
@@ -118,7 +74,6 @@
    "outputs": [],
    "source": [
     "lit_model.model.eval()\n",
-    "\n",
     "p_hat = []\n",
     "with torch.no_grad():\n",
     "  for x, _ in loader:\n",
@@ -134,9 +89,10 @@
     "For future reference, here were the packages we installed for this package.\n",
     "\n",
     "```\n",
-    "conda install conda-forge::pytorch-lightning\n",
+    "conda install conda-forge::lightning\n",
     "conda install conda-forge::pandas\n",
     "conda install conda-forge::tensorboard\n",
+    "conda install pytorch::captum\n",
     "```"
    ]
   },
