streamling summary calculations

--- a/estimate/integrated_gradients.ipynb
+++ b/estimate/integrated_gradients.ipynb
@@ -13,7 +13,7 @@
     "# use the data from ../generate\n",
     "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
     "dataset = LinearData(samples_df)\n",
-    "loader = DataLoader(dataset, batch_size = 16)"
+    "loader = DataLoader(dataset, batch_size = 64)"
    ]
   },
   {
@@ -24,15 +24,25 @@
    "source": [
     "from captum.attr import IntegratedGradients\n",
     "\n",
-    "checkpoint = \"lightning_logs/version_25/checkpoints/epoch=19-step=640.ckpt\"\n",
+    "checkpoint = \"lightning_logs/version_1/checkpoints/epoch=3-step=32.ckpt\"\n",
     "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer())\n",
     "\n",
-    "def forward_fl(model):\n",
+    "def forward(model):\n",
     "  return lambda x: model(x)[1]\n",
     "\n",
-    "ig = IntegratedGradients(forward_fl(lit_model.model))\n",
+    "ig = IntegratedGradients(forward(lit_model.model))\n",
     "x, y = next(iter(loader))\n",
-    "i_hat = ig.attribute(x, n_steps=3)"
+    "i_hat = ig.attribute(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "np.savetxt(\"../data/attributions.csv\", i_hat, delimiter=',')"
    ]
   }
  ],
