avoid within-training reshaping

--- a/estimate/simple_transformer.ipynb
+++ b/estimate/simple_transformer.ipynb
@@ -18,12 +18,14 @@
     "import pandas as pd\n",
     "from torch.utils.data import DataLoader\n",
     "from transformer import LinearData\n",
+    "from transformer import Transformer\n",
     "\n",
     "# use the data from ../generate\n",
     "samples_df = pd.read_csv(\"../data/blooms.csv\")\n",
+    "\n",
     "dataset = LinearData(samples_df)\n",
-    "loader = DataLoader(dataset, batch_size = 16)\n",
-    "x, y = next(iter(loader))"
+    "loader = DataLoader(dataset, batch_size=16)\n",
+    "x, y = next(iter(loader))\n"
    ]
   },
   {
@@ -39,7 +41,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformer import Transformer\n",
     "import torch\n",
     "\n",
     "model = Transformer()\n",
@@ -63,7 +64,7 @@
     "from transformer import LitTransformer\n",
     "\n",
     "lit_model = LitTransformer(model)\n",
-    "trainer = L.Trainer(max_epochs=2)\n",
+    "trainer = L.Trainer(max_epochs=40)\n",
     "trainer.fit(model=lit_model, train_dataloaders=loader)"
    ]
   },
