--- a/estimate/interpretable.Rmd
+++ b/estimate/interpretable.Rmd
@@ -11,6 +11,8 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 ```{r}
 library(tidyverse)
 library(tidymodels)
+library(RcppEigen)
+library(glmnetUtils)
 library(glue)
 my_theme <- theme_classic() +
   theme()
@@ -32,6 +34,11 @@ error_rate <- function(spec, xy) {
 samples <- read_csv("../data/blooms.csv") |>
   select(class, subject, time, taxon, Freq) |>
   mutate(class = factor(class))
+```
+```{r}
+xy <- samples |>
+  pivot_wider(names_from = c("taxon", "time"), values_from = "Freq") |>
+  select(-subject)
 ```
 
 First approach to directly interpretability is to manually define predictive
@@ -56,7 +63,7 @@ xy_features <- samples |>
 
 fit_glm <- cv.glmnet(class ~ ., xy_features, family = "binomial")
 y_hat <- predict(fit_glm, xy_features)
-data.frame(y = xy$class, y_hat = ifelse(y_hat[, 1] > 0, "healthy", "disease")) |>
+data.frame(y = xy_features$class, y_hat = ifelse(y_hat[, 1] > 0, "healthy", "disease")) |>
   count(y, y_hat)
 ```
 
@@ -64,6 +71,10 @@ This does quite a bit better than ordinary glmnet. Still a little ways away from
 transformers.
 
 ```{r}
+logistic_reg(penalty = 0.005) %>% 
+  set_engine("glmnet") |>
+  error_rate(xy)
+
 logistic_reg(penalty = 0.005) %>% 
   set_engine("glmnet") |>
   error_rate(xy_features)
@@ -76,6 +87,7 @@ decision_tree() |>
   set_mode("classification") |>
   error_rate(xy_features)
 
+# this one is cheating a little...
 nearest_neighbor(neighbors = 5) |>
   set_mode("classification") |>
   error_rate(xy_features)
