--- a/estimate/integrated_gradients.ipynb
+++ b/estimate/integrated_gradients.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "from captum.attr import IntegratedGradients\n",
     "\n",
-    "checkpoint = \"lightning_logs/version_1/checkpoints/epoch=3-step=32.ckpt\"\n",
+    "checkpoint = \"lightning_logs/version_0/checkpoints/epoch=39-step=1280.ckpt\"\n",
     "lit_model = LitTransformer.load_from_checkpoint(checkpoint, model = Transformer())\n",
     "\n",
     "def forward(model):\n",
@@ -37,12 +37,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.savetxt(\"../data/attributions.csv\", i_hat, delimiter=',')"
+    "i_hat.shape\n",
+    "np.savetxt(\"../data/attributions.csv\", np.reshape(i_hat, (64, -1)), delimiter=',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i_hat[:, 0, :]"
    ]
   }
  ],
